styles/partials/navbar.css
/* Menu horizontal principal */

#yw-topnav {
  margin:0;
  -webkit-border-radius: var(--navbar-border-radius);
  border-radius: var(--navbar-border-radius);
  border: var(--navbar-border);
  transition: top 0.3s ease-in-out;
  padding: .5rem 0;
  z-index: 1001 !important;
  display: flex;
}
#yw-topnav .container {
  width: 100%;
  padding: 0 .9rem;
  display: flex;
  align-items: center;
}
#yw-topnav .links-container {
  flex: 1;
  display: flex;
  justify-content: center;
}
#yw-topnav .container .navbar-nav {
  flex: 1 auto;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}
@media (min-width: 801px) {
  #yw-topnav .links-container {
    display: flex !important;
  }
}
@media (max-width: 800px) {
  #yw-topnav {
    padding: 0;
  }
  #yw-topnav .links-container {
    display: none;
    position: absolute;
    left: 0;
    top: calc(100% + 1rem);
    right: 0;
    z-index: 1000;
  }
  #yw-topnav .links-container .nav {
    flex-direction: column;
    background-color: var(--navbar-bg-color);
    border-radius: .3em;
    margin: 0 1rem;
    padding: .8rem 1.5rem;
  }
  #yw-topnav .links-container .nav li:before {
    content: " ";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 1rem;
    height: 1px;
    background-color: var(--neutral-light-color);
  }
  #yw-topnav .links-container .nav a {
    line-height: 2.5rem;
    display: inline;
    background-color: var(--navbar-bg-color) !important;
  }

  #yw-topnav .navbar-header {
    flex: 1;
    text-align: center
  }
  #yw-topnav .navbar-header .navbar-brand { width: 100%; }
}
.menu-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 990;
}
#yw-topnav .dropdown-menu {
  background: var(--primary-color);
  box-shadow:none;
  border:none;
  margin-top: 15px;
  border-radius: 0 0 5px 5px;
}
#yw-topnav .dropdown-menu {
	font-size: .9rem;
}
#yw-topnav .btn-menu {
	display: none;
}

@media (max-width: 800px) {
  #yw-topnav .dropdown-menu {
	font-size: 14px;
  }
  #yw-topnav .btn-menu {
	  display: block;
  }
}
#yw-topnav .dropdown-menu a {
  padding: 2px 20px 6px 15px;
  color:var(--neutral-light-color);
  font-weight: 600;
}
#yw-topnav li a {
  padding: .5rem 1.4rem;
}
@media (max-width: 1200px) {
  #yw-topnav li a {
    padding: .3rem .8rem;
  }
}
#yw-topnav li a:hover {
  opacity: .8;
}
#yw-topnav .dropdown-menu a i {
  width: 20px;
  text-align: center;
}
#yw-topnav .dropdown-menu .divider {
  margin: 4px 0 10px 0;
  opacity: .3;
  background-color: var(--neutral-light-color);
}

#yw-topnav .dropdown-menu a:hover, #yw-topnav .dropdown-menu a:focus {
  background: var(--primary-color);
  /*color:rgba(255,255,255,0.85);*/
  opacity: .8;
}
#yw-topnav .btn-default, #yw-topnav .btn-default:hover, #yw-topnav .btn-default:focus {
   background: var(--neutral-light-color);
   border: 1px solid var(--neutral-light-color);
   color: var(--primary-color) !important;
}
#yw-topnav .btn.btn-default.dropdown-toggle:hover {
  color: var(--primary-color) !important;
}
@media (max-width: 800px) {
  #yw-topnav .btn-default, #yw-topnav .btn-default:hover, #yw-topnav .btn-default:focus {
	   background: transparent;
	   border: none;
	   color: var(--neutral-light-color) !important;
	}
}
#yw-topnav .active-link {
  font-weight: bold;
}
#yw-topnav .btn {
  margin-left: 5px;
}
#yw-topnav .btn-default .fa {
  font-size: 1rem;
  vertical-align: middle;
  /* Reduce padding with negative margin */
  margin-left: -6px;
  margin-right: -6px;
  margin-top: -2px;
}
@media (max-width: 800px) {
  #yw-topnav .btn-default .fa { font-size: 1.5rem !important; }
}
@media (max-width: 1200px) {
  #yw-topnav .btn-default .fa { margin-top: 0; }
}
#yw-topnav .btn-default .fa-cog {
  font-size: 1.3rem;
}
.navbar-brand {
  font-size: 1.5rem;
  font-weight: bold;
}
.navbar-brand img {
  max-height: 2.9rem;
  width:auto;
  margin-left: .9rem;
  margin-top: -.9rem;
}
.yw-fixed #yw-topnav, .yw-responsive #yw-topnav {
  margin: 0 -15px 15px;
  /*marge negative pour compenser le conteneur principal*/
}

/* le menu devient fixe quand on scrolle plus bas dans la page */
#yw-topnav.fixable.nav-up, .yw-responsive #yw-topnav.fixable.nav-up {
  top: -80px;
}

/* on decalle le contenu vers le bas pour eviter un saut */
#yw-topnav:not(.affix) + #yw-header {
  margin-top: 0 !important;
}

/* Couleur navbar */
.navbar-default {
   background-color: var(--navbar-bg-color);
   color: var(--navbar-text-color);
   border: var(--navbar-border);
   box-shadow: var(--navbar-shadow);
}
.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
   color: var(--navbar-link-color) !important;
   background-color: var(--navbar-link-bg-color) !important;
}
.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a:hover {
   color: var(--navbar-link-hover-color) !important;
   background-color: var(--navbar-link-bg-hover-color) !important;
}

/* SEARCH */
#search .btn.close-search {
  background-color: transparent;
  border: none;
  color: var(--neutral-light-color) !important;
  font-size: 5rem;
  top: -1.4rem;
  padding: 0 2rem;
}
#search .yeswiki-search-form .btn-search, #search .yeswiki-search-form .search-query {
  height: 4rem !important;
  margin: 0;
  border: none;
}
#search .yeswiki-search-form .btn-search[type=submit] {
  padding: 0 1.8rem;
  background-color: var(--primary-color) !important;
  color: var(--neutral-light-color) !important;
  border-radius: 0 5px 5px 0;
}
#search .yeswiki-search-form .btn-search i {
  font-size: 1.8rem;
}
@media (max-width: 800px) {
  #search .yeswiki-search-form { margin-left: 1.9rem !important; }
  #search .btn.close-search { padding-right: .9rem; }
}
#LoginModal .login-form-modal {
  margin-top: -20px;
}
.login-form {
  margin: 0 auto;
  max-width: 500px;
}
.login-form-dropdown {
  font-size: 1rem;
}
.login-form-inline [type=submit] {
  margin-left: .5rem;
}
#LoginModal .modal-dialog {
  max-width: 600px;
}
#LoginModal input[name=login], .login-form [type=submit], .login-form-dropdown [type=submit] {
  margin-top: 1rem;
}

